fix: fix cropped images on iPhone

--- a/components/landingPage/categoryTile/categoryTile.module.scss
+++ b/components/landingPage/categoryTile/categoryTile.module.scss
@@ -157,7 +157,7 @@
 }
 
 .image {
-    object-fit: cover;
+    object-fit: contain;
     inset: 0;
     height: 100%;
 }
