--- a/components/landingPage/imageTileCarousel/imageTileCarousel.module.scss
+++ b/components/landingPage/imageTileCarousel/imageTileCarousel.module.scss
@@ -113,17 +113,3 @@
   gap: var(--gap-1);
 
 }
-
-.carouselItem {
-  width: 224px;
-  height: 224px;
-  transition: transform 0.5s ease;
-  transform-origin: top left;
-}
-
-.carouselItem img {
-  border-radius: 10px;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
